--- a/src/style/abstract/_variables.scss
+++ b/src/style/abstract/_variables.scss
@@ -2,3 +2,9 @@ $highlight_color: #64ffda;
 $paragraph_text: .8rem;
 $para_font_familty: 'cursive';
 $heading_font_familty: 'system-ui';
+$background_color: #0a192f;
+$font_color1: #fff;
+$background_blur: rgb(10 25 47 / 42%);
+$font_sans: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
+$font_mono: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+
