svg-developerActivity added

--- a/src/style/Components/_PortfolioLayout.scss
+++ b/src/style/Components/_PortfolioLayout.scss
@@ -2,7 +2,7 @@ body{
     margin: 0;
     background-color: $background_color;
     // position: relative;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: $font_sans;
 }
 .portfolio_root_body{
 
@@ -27,6 +27,12 @@ body{
             align-items: center;
             justify-content: space-between;
             width: 100%;
+            .logo{
+                border: 2px solid $font_color1;
+                padding: 8px;
+                border-bottom-right-radius:30px
+
+            }
             a{
                 text-decoration: none;
                 color: $font_color1;
@@ -47,4 +53,32 @@ body{
         }
     }
 
+}
+.HomePage_content{
+    color: $font_color3;
+    padding: 0 150px;
+
+    section{
+        height: 100vh;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+    .description{
+        max-width: 500px;
+        text-align: justify;
+    }
+    .about_section{
+        position: relative;
+        .DeveloperActivity{
+            position: absolute;
+            right: 0;
+            svg{
+                width: clamp(20px,25vw,50vw);
+                height: clamp(20px,25vw,50vw);
+            }
+        }
+    }
 }
