--- a/src/style/abstract/_tools.scss
+++ b/src/style/abstract/_tools.scss
@@ -2,8 +2,13 @@
     cursor: context-menu;
 }
 
-.btn_cursor{
-    cursor: pointer;
+.highlight_btn{
+    text-decoration: none;
+    color: $highlight_color;
+    border: 1px solid $highlight_color;
+    border-radius: 4px;
+    padding: 4px 10px 7px;
+    vertical-align: baseline;
 }
 .big_heading{
     margin: 0;
