--- a/src/style/abstract/_variables.scss
+++ b/src/style/abstract/_variables.scss
@@ -7,8 +7,7 @@ $font_color1: #fff;
 $font_color2: #ccd6f6;
 $font_color3: #8892b0;
 
-// $background_blur: rgb(10 25 47 / 42%);
-$background_blur: transparent;
+$background_blur: rgb(10 25 47 / 42%);
 $font_sans: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 $font_mono: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
 
