--- a/src/style/Components/_PortfolioLayout.scss
+++ b/src/style/Components/_PortfolioLayout.scss
@@ -70,7 +70,7 @@ body{
 }
 .HomePage_content{
     color: $font_color3;
-    padding: 0 150px;
+    padding: 0 10%;
 
     section{
         height: 100vh;
