--- a/src/style/abstract/_tools.scss
+++ b/src/style/abstract/_tools.scss
@@ -2,6 +2,10 @@
     cursor: context-menu;
 }
 
+.highlight_text{
+    color: $highlight_color;
+    text-decoration: none;
+}
 .highlight_btn{
     text-decoration: none;
     color: $highlight_color;
@@ -11,17 +15,16 @@
     vertical-align: baseline;
 }
 .big_heading{
-    margin: 0;
-    font-size: clamp(20px,4vw,50px);
+    font-size: clamp(20px,5vw,50px);
 
     h2{
         color: $font_color2;
         padding: 0;
-        margin: 0px 0px 30px;
+        margin: 0px 0px 20px;
     }
     h3{
         color: $font_color3;
         padding: 0;
-        margin: 0px 0px 30px;
+        margin: 0px 0px 20px;
     }
 }
