--- a/src/style/Components/_PortfolioLayout.scss
+++ b/src/style/Components/_PortfolioLayout.scss
@@ -35,10 +35,7 @@ body{
 
             }
             a{
-                text-decoration: none;
-                color: $font_color1;
                 padding: 8px;
-                cursor: pointer;
             }
 
             ul{
@@ -57,7 +54,7 @@ body{
                 }
                 >:last-child{
                     border: 1px solid $highlight_color;
-                    padding: 8px 4px;
+                    padding: 2px;
                 }
 
 
@@ -80,12 +77,7 @@ body{
         align-items: flex-start;
         justify-content: center;
     }
-    .description{
-        max-width: 500px;
-        text-align: justify;
-        // line-height: 35px;
-    }
-    .about_section{
+    .introduction{
         position: relative;
         height: 100vh;
         max-height: 100vh;
@@ -94,6 +86,7 @@ body{
         background-position: right;
         background-size: 80vh;
         background-clip: content-box;
+
         span{
             background-color: rgb(10 25 47 / 85%);
             backdrop-filter: blur(10px);
@@ -101,20 +94,14 @@ body{
             margin: 0;
         }
 
-        .DeveloperActivity{
-            display: none;
-            position: absolute;
-            right: 0;
-            svg{
-                width: clamp(20px,30vw,50vw);
-                height: clamp(20px,40vw,50vw);
-                // height: 50vh;
-                // width: 100vh;
-            }
+        .description{
+            max-width: 500px;
+            text-align: justify;
+            // line-height: 35px;
         }
     }
     @media only screen and (max-width:1400px) {
-        .about_section{
+        .introduction{
             span{
                 color: #fff;
                 backdrop-filter: blur(5px);
@@ -122,7 +109,7 @@ body{
         }
     }
     @media screen and (max-width:690px) {
-        .about_section{
+        .introduction{
             background-position: center;
             span{
                 padding:0 10px;
@@ -130,4 +117,13 @@ body{
         }
 
     }
+    .about_me{
+        .innerBox{
+            display: grid;
+            grid-template-columns: 3fr 2fr;
+            gap: 50px;
+        }
+    }
+
+
 }
