--- a/src/style/abstract/_variables.scss
+++ b/src/style/abstract/_variables.scss
@@ -10,4 +10,5 @@ $font_color3: #8892b0;
 $background_blur: rgb(10 25 47 / 42%);
 $font_sans: "Calibre","Inter","San Francisco","SF Pro Text",-apple-system,system-ui,sans-serif;
 $font_mono: "SF Mono","Fira Code","Fira Mono","Roboto Mono",monospace;
+$hover_transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 
