getintouch & myPic added

--- a/src/style/Components/_PortfolioLayout.scss
+++ b/src/style/Components/_PortfolioLayout.scss
@@ -4,67 +4,6 @@ body{
     // position: relative;
     font-family: $font_sans;
 }
-.portfolio_root_body{
-
-    .navigation_bar{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        top: 0;
-        width: -webkit-fill-available ;
-        height: 5rem;
-        background-color: $background_blur;
-        backdrop-filter: blur(10px);
-        padding: 0 50px;
-        pointer-events: auto;
-        user-select: auto;
-        filter: none;
-        font-family: $font_mono;
-        z-index: 9999;
-
-        nav{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            .logo{
-                border: 2px solid $font_color1;
-                padding: 8px;
-                border-bottom-right-radius:30px
-
-            }
-            a{
-                padding: 8px;
-            }
-
-            ul{
-                list-style-type: none;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                li{
-                    margin: 0 .5rem;
-
-                }
-                @for $i from 1 through 4 {
-                    >li:nth-child(#{$i}){
-                        opacity: 0;
-                    }
-                }
-                >:last-child{
-                    border: 1px solid $highlight_color;
-                    padding: 2px;
-                }
-
-
-
-            }
-
-        }
-    }
-
-}
 .HomePage_content{
     color: $font_color3;
     padding: 0 10%;
@@ -77,53 +16,9 @@ body{
         align-items: flex-start;
         justify-content: center;
     }
-    .introduction{
-        position: relative;
-        height: 100vh;
-        max-height: 100vh;
-        background-image: url("../../assets/DeveloperActivity.svg");
-        background-repeat: no-repeat;
-        background-position: right;
-        background-size: 80vh;
-        background-clip: content-box;
-
-        span{
-            background-color: rgb(10 25 47 / 85%);
-            backdrop-filter: blur(10px);
-            filter: none;
-            margin: 0;
-        }
-
-        .description{
-            max-width: 500px;
-            text-align: justify;
-            // line-height: 35px;
-        }
+}
+@media screen and (max-width:690px) {
+    .HomePage_content{
+        padding: 0;
     }
-    @media only screen and (max-width:1400px) {
-        .introduction{
-            span{
-                color: #fff;
-                backdrop-filter: blur(5px);
-            }
-        }
-    }
-    @media screen and (max-width:690px) {
-        .introduction{
-            background-position: center;
-            span{
-                padding:0 10px;
-            }
-        }
-
-    }
-    .about_me{
-        .innerBox{
-            display: grid;
-            grid-template-columns: 3fr 2fr;
-            gap: 50px;
-        }
-    }
-
-
 }
