--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -2,3 +2,7 @@
 @import './abstract/mixin';
 @import './abstract/tools';
 @import './Components/PortfolioLayout';
+@import './Components/nav_bar';
+@import './Components/intro';
+@import './Components/aboutme';
+@import './Components/getintouch';
