--- a/src/style/abstract/_tools.scss
+++ b/src/style/abstract/_tools.scss
@@ -45,6 +45,9 @@
         padding: 0;
         margin: 0px 0px 20px;
     }
+    p{
+        font-size: 1rem;
+    }
 }
 a{
     text-decoration: none;
