about me changes

--- a/src/style/Components/_aboutme.scss
+++ b/src/style/Components/_aboutme.scss
@@ -46,15 +46,41 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            img{
-                width: 250px;
-                margin-top: 20px;
-                filter: grayscale(1);
-                &:hover{
-                    filter: grayscale(0);
+            position: relative;
+            .img_wrapper{
+                position: relative;
+                &::after{
+                    content: "";
+                    display: block;
+                    border: 2px solid #64ffda;
+                    border-radius: 5px;
+                    position: absolute;
+                    width: 90%;
+                    height: 90%;
+                    top: 40px;
+                    right: -26px;
+                    transition: $hover_transition;
+                    z-index: -1;
+                }
+
+                &:hover::after{
+                    top: 30px;
+                    right: -13px;
                     transition: $hover_transition;
                 }
+                img{
+                    width: 250px;
+                    margin-top: 20px;
+                    border-radius: 5px;
+                    filter: grayscale(1);
+
+                    &:hover{
+                        filter: grayscale(0);
+                        transition: $hover_transition;
+                    }
+                }
             }
+
 
         }
     }
