--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -5,4 +5,5 @@
 @import './Components/nav_bar';
 @import './Components/intro';
 @import './Components/aboutme';
+@import './Components/workExperiance';
 @import './Components/getintouch';
