--- a/src/style/Components/_PortfolioLayout.scss
+++ b/src/style/Components/_PortfolioLayout.scss
@@ -7,6 +7,7 @@ body{
 }
 ::-webkit-scrollbar{
     width: 3px;
+    height: 3px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
@@ -28,15 +29,13 @@ body{
 
     section{
         height: 100vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
     }
 }
 @media screen and (max-width:690px) {
     .HomePage_content{
         padding: 0;
+        section{
+            width: 100%;
+        }
     }
 }
