--- a/src/style/abstract/_variables.scss
+++ b/src/style/abstract/_variables.scss
@@ -3,6 +3,7 @@ $paragraph_text: .8rem;
 $para_font_familty: 'cursive';
 $heading_font_familty: 'system-ui';
 $background_color: #0a192f;
+$background_color2 : #112240;
 $font_color1: #fff;
 $font_color2: #ccd6f6;
 $font_color3: #8892b0;
