--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -7,3 +7,4 @@
 @import './Components/aboutme';
 @import './Components/workExperiance';
 @import './Components/getintouch';
+@import './Components/footer';
