--- a/src/style/abstract/_tools.scss
+++ b/src/style/abstract/_tools.scss
@@ -39,11 +39,13 @@
         color: $font_color2;
         padding: 0;
         margin: 0px 0px 20px;
+        white-space: nowrap;
     }
     h3{
         color: $font_color3;
         padding: 0;
         margin: 0px 0px 20px;
+        white-space: nowrap;
     }
     p{
         font-size: 1rem;
